[package]
name = "tokio-tcp-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
hyper = { version = "1.0.0-rc.3", features = ["full"] }
http-body-util = "=0.1.0-rc.2"
tls-listener = "0.6.0"
