[package]
name = "tokio-tcp-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
hyper = { version = "1.0.0-rc.3", features = ["full"] }
http-body-util = "=0.1.0-rc.2"
tls-listener = "0.6.0"
hyper-rustls = "0.23.2"
tokio-rustls = "0.24.0"
rustls = "0.20.8"
webpki-roots = "0.22.6"
native-tls = "0.2.11"
rustls-pemfile = "1.0.2"
